Markup index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olamilekan's Link Tree</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <main>
+        <img src="./images/profile.jpg" alt="An avatar image" class="avatar">
+        <h1>Olamilekan's Link Tree</h1>
+        <p>Fullstack web and android developer, gamer and reader</p>
+        <ul class="social-container">
+            <li><a href="https://linkedin.com/in/hayohtee">Linkedin</a></li>
+            <li><a href="https://github.com/hayohtee/">Github</a></li>
+            <li><a href="https://twitter.com/hayohtee">Twitter</a></li>
+            <li><a href="https://codeforces.com/profile/hayohtee">Codeforces</a></li>
+            <li><a href="https://www.leetcode.com/hayohtee">Leetcode</a></li>
+        </ul>
+    </main>
 </body>
 </html>
